fixing bug with viwe height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
 .imgContainer {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+  max-height: 100dvh;
   width: 100%;
 }
 
